@@ -1,4 +1,4 @@
-# $Id: sample-ngircd.conf,v 1.22 2003/04/29 12:36:09 alex Exp $
+# $Id: sample-ngircd.conf,v 1.23 2003/09/11 12:05:28 alex Exp $
 
 #
 # This is a sample configuration file for the ngIRCd, which must adept to
@@ -36,6 +36,10 @@
 	# Ports on which the server should listen. There may be more than
 	# one port, separated with ";". (Default: 6667)
 	;Ports = 6667, 6668, 66694
+
+	# IP address on which the server should listen. (Default: empty,
+	# so the server listens on all IP addresses of the system)
+	;Listen = 1.2.3.4
 	
 	# Text file with the "message of the day" (MOTD). This message will
 	# be shown to all users connecting to the server:
