@@ -10,6 +10,11 @@
                                   -- NEWS --
 
 
+ngIRCd CVS-HEAD
+
+  - Added new configuration variable "Listen" to bind all listening
+    sockets of the server to a single IP address.
+       
 ngIRCd 0.7.1 (2003-07-18)
 
   - Added support for GNU/Hurd.
@@ -165,4 +170,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: NEWS,v 1.57 2003/08/30 20:37:15 alex Exp $
+$Id: NEWS,v 1.58 2003/09/11 12:05:28 alex Exp $
