@@ -12,6 +12,8 @@
 
 ngIRCd CVS-HEAD
 
+  - Added new configuration variable "Listen" to bind all listening
+    sockets of the server to a single IP address.
   - Suppress misleading error message of diff during make run.
   - Enhanced test-suite and made it work on GNU/Hurd.
   - Fixed minor typo in debug output :-)
@@ -464,4 +466,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.210 2003/09/09 13:24:41 alex Exp $
+$Id: ChangeLog,v 1.211 2003/09/11 12:05:28 alex Exp $
